--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <script type="module" defer src="./js/app.js"></script>
+  <title>Create App</title>
 </head>
+
 <body>
-    
+  <main>
+    <div class="main-content">
+      <div class="container" id="container">
+        <div>
+          <img class="imgMain" src="./images/answer-1-1.png" alt="">
+        </div>
+        <div class="text">
+          <h1>¿Cuanto cuesta desarrollar mi <span>app GBP</span>?</h1>
+          <p>Calcula de forma rapida el costo para crear tu app</p>
+          <button id="empezar">
+            <h3>EMPEZAR</h3>
+          </button>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
